--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,17 @@ jobs:
 
       - name: Login to XGuardian
         run: |
-          TOKEN=$(curl -sS -X POST 'https://auth.xguardianplatform.io/login' -H 'accept: application/json' -H 'Content-Type: application/json' -d '{
-            "email": "${{ secrets.XGUARDIAN_EMAIL }}",
-            "password": "${{ secrets.XGUARDIAN_PASSWORD }}"
-          }' | jq -r '.token')
+          RESPONSE=$(curl -sS -X POST 'https://auth.xguardianplatform.io/login' -H 'accept: application/json' -H 'Content-Type: application/json' -d '{
+          "email": "${{ secrets.XGUARDIAN_EMAIL }}",
+          "password": "${{ secrets.XGUARDIAN_PASSWORD }}"
+          }')
+
+          if [[ ! -z "$(echo "$RESPONSE" | jq -r '.error')" ]]; then
+            echo "XGuardian API error: $(echo "$RESPONSE" | jq -r '.error')"
+            exit 1
+          fi
+
+          TOKEN=$(echo "$RESPONSE" | jq -r '.token')
           echo "XGUARDIAN_TOKEN=$TOKEN" >> $GITHUB_ENV
 
       - name: Create App
