--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,30 +11,31 @@ jobs:
 
     strategy:
       matrix:
-        lang: [python]
+        lang: [python, java]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Python
+      - name: Set up Python and Java
         run: |
-          sudo apt-get install -y python3
+          sudo apt-get install -y python3 openjdk-11-jdk
           echo "python=python3" >> $GITHUB_ENV
-          
+          echo "java=openjdk-11-jdk" >> $GITHUB_ENV
+
       - name: Login to XGuardian
         run: |
           RESPONSE=$(curl -sS -X POST 'https://auth.xguardianplatform.io/login' -H 'accept: application/json' -H 'Content-Type: application/json' -d '{
-          "email": "${{ secrets.XGUARDIAN_EMAIL }}",
-          "password": "${{ secrets.XGUARDIAN_PASSWORD }}"
+            "email": "${{ secrets.XGUARDIAN_EMAIL }}",
+            "password": "${{ secrets.XGUARDIAN_PASSWORD }}"
           }')
 
-          if [[ ! -z "$(echo "$RESPONSE" | jq -r '.error')" ]]; then
-            echo "XGuardian API error: $(echo "$RESPONSE" | jq -r '.error')"
+          TOKEN=$(echo "$RESPONSE" | jq -r '.token')
+          if [ -z "$TOKEN" ]; then
+            echo "XGuardian API error: Failed to extract token from API response."
             exit 1
           fi
 
-          TOKEN=$(echo "$RESPONSE" | jq -r '.token')
           echo "XGUARDIAN_TOKEN=$TOKEN" >> $GITHUB_ENV
 
       - name: Create App
@@ -46,6 +47,12 @@ jobs:
             "languages": ["${{ env.LANGUAGES }}"],
             "description": "${{ env.DESCRIPTION }}"
           }' | jq -r '.app_id')
+
+          if [ -z "$APP_ID" ]; then
+            echo "XGuardian API error: Failed to create the app."
+            exit 1
+          fi
+
           echo "XGUARDIAN_APP_ID=$APP_ID" >> $GITHUB_ENV
 
       - name: Generate Upload URL
@@ -56,16 +63,15 @@ jobs:
             "scan_version": "${{ env.SCAN_VERSION }}",
             "file_type": "${{ env.FILE_TYPE }}"
           }' | jq -r '.url')
+
+          if [ -z "$URL" ]; then
+            echo "XGuardian API error: Failed to generate upload URL."
+            exit 1
+          fi
+
           echo "XGUARDIAN_UPLOAD_URL=$URL" >> $GITHUB_ENV
 
-      - name: Clone repository
-        run: git clone https://github.com/WebGoat/WebGoat
-
-      - name: Zip files
-        run: |
-          cd WebGoat
-          zip -r webgoat.zip .
-          find . -type f ! -name 'webgoat.zip' -exec rm -rf {} +
+      # ... Rest of your workflow steps ...
 
       - name: Upload application for scan
         run: |
