--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Login na API
+name: Login na API e Armazenar Token
 
 on:
   push:
@@ -6,14 +6,14 @@ on:
       - master
 
 jobs:
-  login:
+  login_and_store_token:
     runs-on: ubuntu-latest
 
     steps:
     - name: Verificar código
       uses: actions/checkout@v2
 
-    - name: Fazer login na API
+    - name: Fazer login na API e armazenar token
       env:
         API_EMAIL: ${{ secrets.API_EMAIL }}
         API_PASSWORD: ${{ secrets.API_PASSWORD }}
@@ -26,4 +26,9 @@ jobs:
             "email": "'"${API_EMAIL}"'",
             "password": "'"${API_PASSWORD}"'"
           }' | jq -r '.token')
-          echo "$response" | tr -d '\n' | xargs -0 echo -n | gh secret set API_TOKEN -
+
+        # Armazena o token como um segredo no GitHub Actions
+        echo "$response" | tr -d '\n' | xargs -0 echo -n | gh secret set API_TOKEN -
+
+        # Limpa a variável temporária que continha o token
+        unset response
