--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       API_EMAIL: ${{ secrets.API_EMAIL }}
       API_PASSWORD: ${{ secrets.API_PASSWORD }}
-      GH_TOKEN: ${{ secrets.GIT_TOKEN }} # Defina o token de acesso do GitHub como uma variável de ambiente
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
     - name: Verificar código
@@ -20,9 +20,9 @@ jobs:
 
     - name: Instalar GitHub CLI
       run: |
-        # Instalação do GitHub CLI
+        # Instalação do GitHub CLI usando o repositório de pacotes genéricos
         sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-        sudo apt-add-repository https://cli.github.com/packages
+        sudo sh -c 'echo "deb [arch=amd64] https://cli.github.com/packages stable main" > /etc/apt/sources.list.d/github-cli.list'
         sudo apt-get update
         sudo apt-get install gh -y
 
