--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       API_EMAIL: ${{ secrets.API_EMAIL }}
       API_PASSWORD: ${{ secrets.API_PASSWORD }}
       GH_TOKEN: ${{ secrets.GIT_TOKEN }}
-      APP_NAME: ${{ github.repository_name }} # Definir o nome da aplicação como o nome do repositório GitHub
+      APP_NAME: ${{ github.event.repository.name }} # Definir o nome da aplicação como o nome do repositório GitHub
       TEAM_ID: 370
 
     steps:
@@ -44,7 +44,7 @@ jobs:
     - name: Verificar e criar aplicação
       run: |
         # Endpoint da API para verificar e criar aplicação
-        VERIFY_CREATE_APP_URL="https://uploader-mvp.development.xguardianplatform.io/verify_create_app"
+        VERIFY_CREATE_APP_URL="https://uploader-mvp.xguardianplatform.io/create_app"
 
         DATA='{
           "token": "'"${API_TOKEN}"'",
