--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
           -d "${DATA}")
 
         HTTP_STATUS=$(echo "$RESPONSE" | tail -n1)
+        echo "$RESPONSE"
 
         if [ "$HTTP_STATUS" == "200" ]; then
           echo "Aplicação verificada e criada com sucesso!"
