--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,9 +64,9 @@ jobs:
 
         if [ "$HTTP_STATUS" == "200" ]; then
           echo "Aplicação criada com sucesso!"
-        elif [ "$HTTP_STATUS" == "400" ]; then
-          echo "A aplicação já existe, prosseguindo com o fluxo de trabalho."
         else
-          echo "Erro desconhecido: Código de status HTTP $HTTP_STATUS"
-          # Tratar outros erros de código de status, se necessário
+          # Extrair apenas o código de status HTTP (por exemplo, "400")
+          HTTP_STATUS=${HTTP_STATUS%%[^0-9]*}
+          echo "O código de status HTTP é $HTTP_STATUS."
+          echo "A aplicação já existe ou ocorreu um erro desconhecido. Continuando o fluxo de trabalho."
         fi
