--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,11 +62,11 @@ jobs:
 
         HTTP_STATUS=$(echo "$RESPONSE" | tail -n1)
 
-        if [ "$HTTP_STATUS" == "200" ]; then
+        if [ -z "$HTTP_STATUS" ]; then
+          echo "Erro desconhecido: Não foi possível obter o código de status HTTP."
+        elif [ "$HTTP_STATUS" == "200" ]; then
           echo "Aplicação criada com sucesso!"
         else
-          # Extrair apenas o código de status HTTP (por exemplo, "400")
-          HTTP_STATUS=${HTTP_STATUS%%[^0-9]*}
           echo "O código de status HTTP é $HTTP_STATUS."
           echo "A aplicação já existe ou ocorreu um erro desconhecido. Continuando o fluxo de trabalho."
         fi
