--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       TEAM_ID: 370
       SCAN_VERSION: 1.0
       FILE_TYPE: "application/zip"
+      UPLOAD_URL: "teste"
 
     steps:
     - name: Verificar código
