--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,8 +108,8 @@ jobs:
             "sca": "1", 
             "sast": "1" 
           }' | jq -r '.url')
-          echo "URL de Upload: ${RESPONSE}"
-          UPLOAD_URL="${RESPONSE}"
+          echo "URL de Upload: ${UPLOAD_URL}"
+          echo "UPLOAD_URL=${UPLOAD_URL}" >> $GITHUB_ENV
 
     - name: Zip files
       run: |
